[package]
name = "solana-program"
version = "0.1.0"
edition = "2018"
publish = false

[features]
no-entrypoint = []

[dependencies]
zeroize = "=1.3.0"
solana-program = "1.6.9"
thiserror = "1.0.24"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
arrayref = "0.3.6"




[lib]
crate-type = ["cdylib", "lib"]